kubernetes/components/dragonfly/networkpolicy.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: dragonfly-allow-prometheus
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dragonfly
#       app.kubernetes.io/part-of: dragonfly
#   ingress:
#     - from:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: observability
#           podSelector:
#             matchLabels:
#               app.kubernetes.io/name: prometheus
#       ports:
#         - port: 9999
#           protocol: TCP
#   policyTypes:
#     - Ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: dragonfly-allow-namespace
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dragonfly
#       app.kubernetes.io/part-of: dragonfly
#   ingress:
#     - from:
#         - podSelector: {}
#       ports:
#         - port: 6379
#           protocol: TCP
#   policyTypes:
#     - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dbms
          podSelector:
            matchLabels:
              app.kubernetes.io/name: dragonfly-operator
      ports:
        - port: 9999
          protocol: TCP
        - port: 6379
          protocol: TCP
  policyTypes:
    - Ingress
